Fix mobile newspaper alignment

--- a/src/index.css
+++ b/src/index.css
@@ -127,7 +127,7 @@
 /* Mobile: scale newspaper pages to fit viewport width */
 @media screen and (max-width: 639px) {
   .newspaper-mobile-wrap {
-    transform-origin: top center;
+    transform-origin: top left;
     width: 8.5in;
     margin: 0 auto;
     transform: scale(var(--mobile-scale, 0.45));
